<resources>
    <string name="app_name">CalculatorBMI</string>

    <string name="calculator_bmi">Kalkulator BMI</string>
    <string name="adult">Dorosły</string>
    <string name="child">Dziecko</string>
    <string name="calculate_bmi">oblicz BMI</string>
    <string name="your_bmi_is">Twoje BMI wynosi:</string>
    <string name="human_height">Podaj swój wzrost (cm)</string>
    <string name="human_weight">Podaj swoją wagę (kg)</string>
    <string name="bmiCategory">Twoje BMI wskazuje na:</string>
    <string name="percents_gender_choose">Wybór siatki percentylowej dla:</string>
    <string name="girls">Dziewczynek</string>
    <string name="boys">Chłopców</string>
    <string name="child_age">Podaj wiek dziecka (2-20)</string>
    <string name="your_age_is">Twój wiek to:</string>
    <string name="result">wynik</string>
    <string name="put_percent">wpisz centyl</string>
    <string name="your_percent_is">Twoja wartość centylowa to:</string>
    <string name="your_category_is">Wskazane wielkości sugerują:</string>
    <string name="adult_person">osoba DOROSŁA</string>
    <string name="child_person">dziecka</string>
    <string name="title_activity_start_logo">FullscreenActivity</string>
    <string name="adult_age">Ile masz lat ?</string>
    <string name="recommended_food">Polecany przepis:</string>
    <string name="oblicz_PPM">Oblicz PPM</string>
    <string name="calories_limit">Limit kalorii:</string>
    <string name="woman">kobieta</string>
    <string name="man">mężczyzna</string>
    <string name="play_game">play game</string>

    <string name="results_format">Shots fired: %1$d\nTotal time: %2$.1f</string>
    <string name="reset_game">Reset Game</string>
    <string name="win">You win!</string>
    <string name="lose">You lose!</string>
    <string name="time_remaining_format">Time remaining: %.1f seconds</string>

    <string name="stat">statystyka</string>
</resources>
