<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BoyPercentActivity">

    <RelativeLayout
        android:id="@+id/logo_boy_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_grey">


        <ImageView
            android:id="@+id/logo_boy_icon"
            android:layout_width="95dp"
            android:layout_height="84dp"
            android:layout_below="@+id/logo_boy_text"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/def_margin"
            android:src="@drawable/openofficeorg_calc" />

        <TextView
            android:id="@+id/logo_boy_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="81dp"
            android:layout_marginLeft="81dp"
            android:layout_marginTop="@dimen/def_margin"
            android:layout_marginEnd="81dp"
            android:layout_marginRight="81dp"
            android:gravity="center"
            android:text="@string/calculator_bmi"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="@dimen/logo_text_size"
            android:textStyle="bold" />

    </RelativeLayout>

    <TextView
        android:id="@+id/yourBmiIs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/light_grey"
        android:text="@string/your_bmi_is"
        android:textColor="@android:color/holo_green_dark"
        app:layout_constraintBottom_toTopOf="@+id/yourAgeIs"
        app:layout_constraintEnd_toStartOf="@+id/boyBmi"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_boy_layout" />

    <TextView
        android:id="@+id/boyBmi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_green_dark"
        android:text="bmi"
        android:textColor="@color/cardview_light_background"
        android:textSize="@dimen/result_text_size"
        app:layout_constraintBottom_toTopOf="@+id/boyAge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/yourBmiIs"
        app:layout_constraintTop_toBottomOf="@+id/logo_boy_layout" />

    <TextView
        android:id="@+id/yourAgeIs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/light_grey"
        android:text="@string/your_age_is"
        android:textColor="@android:color/holo_green_dark"
        app:layout_constraintBottom_toTopOf="@+id/boyPercent"
        app:layout_constraintEnd_toStartOf="@+id/boyAge"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yourBmiIs" />

    <TextView
        android:id="@+id/boyAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_green_dark"
        android:text="age"
        android:textColor="@color/cardview_light_background"
        android:textSize="@dimen/result_text_size"
        app:layout_constraintBottom_toTopOf="@+id/boyPercent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/yourAgeIs"
        app:layout_constraintTop_toBottomOf="@+id/boyBmi" />

    <ImageView
        android:id="@+id/boyPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/calcChildBmiCategory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boyAge"
        app:srcCompat="@drawable/percentylechlopcy" />

    <EditText
        android:id="@+id/percentVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/put_percent"
        android:inputType="number"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="@dimen/other_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/calcChildBmiCategory"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boyPercent" />

    <Button
        android:id="@+id/calcChildBmiCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textSize="@dimen/btn_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/percentVal"
        app:layout_constraintTop_toBottomOf="@+id/boyPercent" />

</androidx.constraintlayout.widget.ConstraintLayout>